--- a/sass/components/navigation.sass
+++ b/sass/components/navigation.sass
@@ -56,7 +56,9 @@
 			&:hover
 				background-color: $border-component-color + 15
 
-			&:active,
+			&:active
+				background-color: $border-component-color + 8
+
 			&.active
 				background-color: $border-component-color
 
